--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "rehype-pretty-code": "^0.14.1",
+    "shiki": "^3.15.0"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.17",
